--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -23,5 +23,36 @@
       </table>
     </div>
   </div>
+    <h2 class="mt-5 mb-3">Проверки</h2>
+    <form method="post" action="/urls/{{ url.id }}/checks">
+    <input type="submit" class="btn btn-primary" value="Запустить проверку">
+    </form>
+
+<div>
+    <table class="table table-bordered table-hover mt-2" data-test="checks">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Код Ответа</th>
+                <th>H1</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Дата Создания</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for check in checks %}
+            <tr>
+                <td>{{ check.id }}</td>
+                <td>{{ check.status_code }}</td>
+                <td>{{ check.h1 }}</td>
+                <td>{{ check.title }}</td>
+                <td>{{ check.description }}</td>
+                <td>{{ check.created_at.strftime('%Y-%m-%d') }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 </main>
 {% endblock %}
