--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -24,7 +24,7 @@
     </div>
   </div>
     <h2 class="mt-5 mb-3">Проверки</h2>
-    <form method="post" action="/urls/{{ url.id }}/checks">
+    <form method="post" action="{{ url_for('run_checks', id=url.id) }}">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
     </form>
 
