--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -16,7 +16,7 @@
       <tr>
         <td>{{ url.id }}</td>
         <td>
-          <a href="/urls/{{ url.id }}">
+          <a href="{{ url_for('get_url', id=url.id) }}">
             {{ url.name }}
           </a>
         </td>
