--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -20,8 +20,8 @@
             {{ url.name }}
           </a>
         </td>
-        <td>{{ url.last_checked }}</td>
-        <td>{{ url.response_code }}</td>
+        <td>{{ url.last_checked.strftime('%Y-%m-%d') if url.last_checked else '' }}</td>
+        <td>{{ url.response_code if url.response_code else '' }}</td>
       </tr>
       {% endfor %}
     </tbody>
